[package]
name = "kithara-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform primitives (sync, time, thread) for native and wasm32."
keywords = ["platform", "wasm", "sync", "audio", "primitives"]
categories = ["wasm", "concurrency"]

[features]
# Virtual monotonic clock for fast, deterministic offline playback tests.
# OFF by default and referenced by no shipping crate, so production builds are
# unchanged. See src/time/flash.rs and the README. Turn on in the test build to
# run warm-cache offline tests at CPU speed (compared against the real-time run
# as ground truth).
flash = []
signal = ["tokio/signal"]
# Native socket surface for test/server plumbing. Keep this out of the default
# production platform dependency so non-network consumers do not pull tokio net
# or the async IO extension traits.
tokio-net = ["tokio/net", "tokio/io-util"]
tokio-rt-multi-thread = ["tokio/rt-multi-thread"]

[dependencies]
delegate = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
web-time = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
tokio_with_wasm = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm_safe_thread = { workspace = true }
web-sys = { workspace = true }

[dev-dependencies]
kithara-platform = { path = ".", default-features = false }
kithara-test-macros = { path = "../kithara-test-macros" }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang"] }
wasm-bindgen-test = { workspace = true }

# Native-only: criterion pulls a native-only toolchain, never wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true

# Micro-benchmarks for the propagate-down cancel primitives (`CancelToken` /
# `CancelGroup`). `cargo bench -p kithara-platform`.
[[bench]]
name = "cancel"
harness = false
