[package]
name = "kithara-play"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Player engine with Firewheel audio graph, EQ, crossfade, and DJ-ready architecture"

[lints]
workspace = true

[dependencies]
# Kithara sub-crates
kithara-audio = { workspace = true }
kithara-decode = { workspace = true }
kithara-events = { workspace = true }
kithara-platform = { workspace = true }
kithara-stream = { workspace = true }
kithara-file = { workspace = true }
kithara-hls = { workspace = true }
kithara-abr = { workspace = true }
kithara-assets = { workspace = true }
kithara-net = { workspace = true }
kithara-bufpool = { workspace = true }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true }
num-traits = { workspace = true }

# Audio engine
firewheel = { workspace = true }
thunderdome = { workspace = true }

# Async & channels
tokio-util = { workspace = true }
ringbuf = { workspace = true }

# Utilities
bon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
portable-atomic = { workspace = true }
smallvec = { workspace = true }

unimock = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha1", path = "../kithara-workspace-hack" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_platform = { workspace = true }
firewheel-web-audio = { workspace = true, optional = true }

[features]
default = ["backend-cpal"]
backend-cpal = ["firewheel/cpal"]
backend-web-audio = ["dep:firewheel-web-audio"]
wasm-bindgen = ["firewheel/wasm-bindgen"]
apple = ["kithara-audio/apple"]
# Re-export of testing helpers (engine module + macro mocks).
# Offline backend lives in `kithara-integration-tests::offline` since 2026-05-07.
probe = []
mock = []

[dev-dependencies]
kithara-play = { path = ".", default-features = false, features = ["backend-cpal", "probe"] }
kithara-audio = { workspace = true, features = ["probe"] }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe"] }
wasm-bindgen-test = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
kithara-play = { path = ".", features = ["wasm-bindgen"] }
