[package]
name = "kithara-play"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Player engine: audio graph, EQ, crossfade, DJ-ready."
keywords = ["audio", "player", "dj", "crossfade", "playback"]
categories = ["multimedia::audio"]

[features]
default = ["backend-cpal", "symphonia", "client-reqwest", "tls-rustls"]
backend-cpal = ["firewheel/cpal"]
# HTTP backend forwarding to every kithara-net-reaching dep.
client-reqwest = [
    "kithara-net/client-reqwest",
    "kithara-stream/client-reqwest",
    "kithara-file/client-reqwest",
    "kithara-hls/client-reqwest",
    "kithara-audio/client-reqwest",
    "kithara-decode/client-reqwest",
    "kithara-events/client-reqwest",
    "kithara-abr/client-reqwest",
]
client-wreq = [
    "kithara-net/client-wreq",
    "kithara-stream/client-wreq",
    "kithara-file/client-wreq",
    "kithara-hls/client-wreq",
    "kithara-audio/client-wreq",
    "kithara-decode/client-wreq",
    "kithara-events/client-wreq",
    "kithara-abr/client-wreq",
]
tls-rustls = [
    "kithara-net/tls-rustls",
    "kithara-stream/tls-rustls",
    "kithara-file/tls-rustls",
    "kithara-hls/tls-rustls",
    "kithara-audio/tls-rustls",
    "kithara-decode/tls-rustls",
    "kithara-events/tls-rustls",
    "kithara-abr/tls-rustls",
]
tls-native = [
    "kithara-net/tls-native",
    "kithara-stream/tls-native",
    "kithara-file/tls-native",
    "kithara-hls/tls-native",
    "kithara-audio/tls-native",
    "kithara-decode/tls-native",
    "kithara-events/tls-native",
    "kithara-abr/tls-native",
]
backend-web-audio = ["dep:firewheel-web-audio", "symphonia"]
wasm-bindgen = ["firewheel/wasm-bindgen"]
apple = ["kithara-audio/apple"]
# Software decoder pass-through. Required when not opting into a hardware
# backend, since `kithara-decode`'s `DecoderBackend` enum needs at least
# one variant available. `backend-web-audio` pulls it in transitively:
# wasm has no hardware decoder (apple/android are native-only).
symphonia = ["kithara-audio/symphonia", "kithara-decode/symphonia"]
fdk-aac = ["kithara-audio/fdk-aac", "kithara-decode/fdk-aac"]
# Re-export of testing helpers (engine module + macro mocks).
# Offline backend lives in `kithara-integration-tests::offline` since 2026-05-07.
probe = []
mock = []

[dependencies]
kithara-abr = { workspace = true, default-features = false }
kithara-assets = { workspace = true }
# Kithara sub-crates
kithara-audio = { workspace = true, default-features = false }
kithara-bufpool = { workspace = true }
kithara-decode = { workspace = true, default-features = false }
kithara-events = { workspace = true }
kithara-file = { workspace = true, default-features = false }
kithara-hls = { workspace = true, default-features = false }
kithara-net = { workspace = true, default-features = false }
kithara-platform = { workspace = true }
kithara-stream = { workspace = true, default-features = false }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true }

# Utilities
bon = { workspace = true }

# Audio engine
firewheel = { workspace = true }
num-traits = { workspace = true }
portable-atomic = { workspace = true }

# Async & channels
ringbuf = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
thunderdome = { workspace = true }
tracing = { workspace = true }

unimock = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_platform = { workspace = true }
firewheel-web-audio = { workspace = true, optional = true }

[dev-dependencies]
kithara-audio = { workspace = true, features = ["probe"] }
kithara-play = { path = ".", default-features = false, features = ["backend-cpal", "probe"] }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang", "no-block"] }
wasm-bindgen-test = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
kithara-play = { path = ".", features = ["wasm-bindgen"] }

[lints]
workspace = true
