[package]
name = "kithara-probe-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro crate: #[kithara::probe] attribute for USDT + tracing observability"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.1", path = "../kithara-workspace-hack" }

[lints]
workspace = true
